# invest

./: .babelrc  .clabot  .coveragerc  .dockerignore  .env-example  .eslintrc  .eslintrc.js  .gitignore  .hgignore  .readthedocs.yml  .readthedocs_environment.yml  .yarnrc.yml  CITATION.cff  CONTRIBUTING.md  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  NOTICE.txt  README-new.md  README.md  README.rst  README_PYTHON.rst  appveyor-python3.yml  appveyor.yml  babel.config.js  bitbucket-pipelines.yml  build.js  conda_environment.yml  constraints_tests.txt  create_uhim_test_data.py  electron-builder-config.js  generate_history.sh  hra_sampledata_python_script.py  invest-flask.spec  jobdb.json  make-args-spec.py  ndr_test.py  numpy_regex.py  package-lock.json  (+22 more)
.github/: auto-main-into-release-pr-body.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md  config.yml
.github/actions/: setup_env_action.yml
.github/workflows/: Dockerfile  auto-pr-from-main-into-releases.yml  auto-pr-from-master-into-releases.yml  auto-release-bugfix.yml  autopr-cleanup.yml  autopr-create.yml  binary-applications.yml  build-and-test.yml  build-docker.yml  build-electron.yml  build-py-dists.yml  check-cla.yml  demo.yml  pr-close.yml  release-part-1.yml  release-part-2.yml  rollback-release.yml  run-tests.yml  sample-data-validation.yml  test.yml  tests.yml
__mocks__/: electron.js  localforage.js
cache/: carbon_complete.json  carbon_error.json  carbon_setup.json  coastal_vulnerability_setup.json  cv.json  hra_complete.json
ci/: appveyor-binary-build.ps1  appveyor-binary-install.ps1  appveyor-sign-and-upload.ps1  mac_mini_build_process.sh  main-release-pr-body.md  master-release-pr-body.md  windows-ci-binary-install.ps1
ci-dependencies/: debian-api-docs.sh  debian-data-zipfiles.sh  debian-userguide.sh  windowsserver1709-build.ps1
codesigning/: Makefile  README.md  enqueue-binary.py  enqueue-current-installer.py  enqueue-current-installer.sh  enqueue-current-windows-installer.sh  requirements.txt
custom_build_backend/: backend.py
dev_data/: carbon_willamette.invs.json  coastal_vuln_wcvi.invs.json  hra_wcvi.invs.json
docker/: Dockerfile  README.md
exe/: README.rst  invest.spec  qt.conf
exedata/: invest_blue_carbon.py  invest_blue_carbon_preprocessor.py  invest_carbon.py  invest_carbon_edge_effect.py  invest_cropland_expansion.py  invest_fisheries_hst.py  invest_hydropower_water_yield.py  invest_marine_water_quality_biophysical.py  invest_overlap_analysis.py  invest_overlap_analysis_mz.py  invest_recreation_client_init.py  invest_scenario_generator.py  invest_scenario_generator_summary.py  invest_scenic_quality.py  invest_sdr.py  invest_sediment.py  invest_wave_energy.py  invest_wind_energy.py
internationalization/: README.md  extract_messages.sh  messages.pot  prepare_messages.sh
jenkins/: api-docs.sh  posix_build.sh  windows_build.bat
sample_datastacks/: bitbucket-pipelines.yml  carbon_willamette.invs.json  cbc_galveston_bay.invs.json  cbc_pre_galveston_bay.invs.json  check-directories-in-gitattributes.sh  coastal_vuln_grandbahama.invs.json  delineateit_gura.invs.json  forest_carbon_amazonia.invs.json  habitat_quality_willamette.invs.json  invest_urban_nature_access_datastack.invest.json  ndr_gura.invs.json  pollination_willamette.invs.json  recreation_andros.invs.json  routedem_gura.invs.json  scenic_quality_wcvi_sample.invest.json  stormwater_datastack.invest.json  urban_cooling_model_datastack.invest.json  urban_flood_risk_mitigation.invs.json
scripts/: build_install_html_docs.sh  build_install_userguide_deps.sh  build_install_zipfiles.sh  build_requirements_to_conda_yml.py  build_sampledata_filesize_registry.py  build_sampledata_registry.py  check-cla.py  check_required_programs.bat  check_required_programs.sh  clean-build-dir.js  convert-requirements-to-conda-yml.py  convert-ui-config.py  create-parameter-set-from-iui-config.py  fetch_invest_binaries.js  fetch_usage_polygon.py  generate-required-validation.py  generate_base_ui_arg_specs.py  get_args.py  get_invest_binaries_gcs.js  invest-autotest.py  invest-autovalidate.py  jenkins-build.bat  jenkins-build.sh  jenkins-test-ui.bat  jenkins-test.bat  jenkins_push_artifacts.py  model_datastack_dictionary.py  release-1-initiate.sh  release-2-commit.sh  release-3-publish.sh  setup_macos_keychain.sh  update-citation-cff.py  update_installer_urls.py  userguide-filevalidator.py  who-authored-the-pr.py  zip.ps1
src/: HRA_args.js  HraApp.js  InvestJob.js  InvestJob.jsx  Job.js  VizApp.js  VizApp.jsx  VizErrorBoundary.jsx  about.html  app.jsx  components.jsx  constants.js  getInvestList.js  index.html  index.js  launcher-compiled.js  logger.js  main.js  main_helpers.js  menubar.js  preload.js  report_a_problem.html  sampledata_registry.json  server.py  server_requests.js  server_requests.mjs  ui_config.js  utils.js  valid_HRA_args.js  validate.js
tests/: __init__.py  aoi.geojson  app.test.js  downloadmodal.test.js  flaskapp.test.js  hometab.test.js  investjob.test.js  investtab.test.js  jest.overrides.js  job.test.js  loadbutton.test.js  logtab.test.js  main.test.js  modelstab.test.js  setuptab.test.js  spectron.test.js  test_annual_water_yield.py  test_args_specs.py  test_carbon.py  test_cli.py  test_coastal_blue_carbon.py  test_coastal_vulnerability.py  test_crop_production.py  test_datastack.py  test_delineateit.py  test_delineateit_core.py  test_delineateitpy.py  test_example.py  test_file_registry.py  test_finfish.py  test_fisheries.py  test_forest_carbon_edge.py  test_globio.py  test_habitat_quality.py  test_habitat_suitability.py  test_hra.py  test_hra2.py  test_hydropower.py  test_importall.py  test_invest.py  (+41 more)
ui_data/: natcap.invest.ndr.ndr.json  natcap.invest.recreation.recmodel_client.json
ui_tests/: test_cli.py  test_cli_gui.py  test_model_logging.py  test_ui_inputs.py
workbench/: .eslintrc  about.html  babel.config.js  changelog.html  electron-builder-config.js  i18next-parser.config.mjs  index.html  package.json  readme.md  report_a_problem.html  splash.html  vite.config.js
(+1699 files in other folders)
